CrOS Shelf: Fixes to the tooltip logic

Performance improvements, one small step at a time :-)

The current tooltip logic has at least two issues that this CL
addresses:

* When computing the contiguous area over which to show a tooltip
  continuously, all children of the ShelfView were considered
  (including overflow items for a non-overflow shelf for instance).
* Said contiguous area was recomputed on *every single mouse event*
  over the shelf, thus performing a O(n) (n = # of shelf items)
  operation every mouse move. These are cheap but completely gratuitous
  operations.

Note that this CL will not yet by itself fix the linked bug.

Bug: 896524
Change-Id: I801bf727232bd588b25dd797fdd20a6a5f675ac3
Reviewed-on: https://chromium-review.googlesource.com/c/1391360
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Manu Cornet <manucornet@chromium.org>
Cr-Commit-Position: refs/heads/master@{#619442}
Former-commit-id: 32fc91bea8effa37436b084d4c5dd30a57157646